Fixing broken style of ts-dropdown

--- a/src/sass/50_objects/_objects.form-elements.scss
+++ b/src/sass/50_objects/_objects.form-elements.scss
@@ -492,8 +492,8 @@ $form-footer-outline-dropdown: 3px solid var(--oo-color-footer-text);
       content: '';
       position: absolute;
       right: 1rem;
-      top: 50%;
-      transform: translateY(-50%);
+      top: 50% !important;
+      transform: translateY(-50%)!important;
       width: 0.75rem;
       height: 0.375rem;
       background-color: $form-color;
@@ -562,6 +562,7 @@ $form-footer-outline-dropdown: 3px solid var(--oo-color-footer-text);
     cursor: default;
 
     &-remove {
+      background-color: $form-bg;
       margin: 0 0.5rem 0 0;
       padding: 0;
       width: $form-remove-wrapper;
@@ -684,6 +685,10 @@ $form-footer-outline-dropdown: 3px solid var(--oo-color-footer-text);
     }
   }
 
+  .ts-dropdown-content {
+    padding: 0.5rem 0;
+  }
+
   .--bg-light & {
     border-color: $form-light-border-color;
 
@@ -718,6 +723,7 @@ $form-footer-outline-dropdown: 3px solid var(--oo-color-footer-text);
 
     .ts-item {
       &-remove {
+        background-color: $form-light-bg;
         @include hover-focus-active() {
           &:before {
             background-color: $form-light-border-color;
@@ -799,6 +805,7 @@ $form-footer-outline-dropdown: 3px solid var(--oo-color-footer-text);
     }
     .ts-item {
       &-remove {
+        background-color: $form-dark-bg;
         @include hover-focus-active() {
           &:before {
             background-color: $form-dark-border-color;
@@ -879,6 +886,7 @@ $form-footer-outline-dropdown: 3px solid var(--oo-color-footer-text);
     }
     .ts-item {
       &-remove {
+        background-color: $form-primary-bg;
         @include hover-focus-active() {
           &:before {
             background-color: $form-primary-border-color;
@@ -960,6 +968,7 @@ $form-footer-outline-dropdown: 3px solid var(--oo-color-footer-text);
     }
     .ts-item {
       &-remove {
+        background-color: $form-secondary-bg;
         @include hover-focus-active() {
           &:before {
             background-color: $form-secondary-border-color;
@@ -1041,6 +1050,7 @@ $form-footer-outline-dropdown: 3px solid var(--oo-color-footer-text);
     }
     .ts-item {
       &-remove {
+        background-color: $form-footer-bg;
         @include hover-focus-active() {
           &:before {
             background-color: $form-footer-border-color;
@@ -1121,6 +1131,7 @@ $form-footer-outline-dropdown: 3px solid var(--oo-color-footer-text);
     }
     .ts-item {
       &-remove {
+        background-color: $form-bg;
         @include hover-focus-active() {
           &:before {
             background-color: $form-border-color;
